fixed the votecard content alignment

--- a/src/components/VoteCard/VoteCard.module.scss
+++ b/src/components/VoteCard/VoteCard.module.scss
@@ -65,7 +65,7 @@
     min-height: 3rem;
 
     .card-content-wrapper {
-      grid-template-columns: fit-content 1fr fit-content;
+      grid-template-columns: 5rem 1fr 5rem;
       grid-template-rows: 1fr;
     }
 
@@ -94,5 +94,6 @@
   .correct-answer-text {
     font-size: 0.6rem;
     width: 3rem;
+    text-align: center;
   }
 }
